2009-09-26  Ankit Jain  <jankit@novell.com>

	* Project.cs (Evaluate): Split into this and ..
	(PrepareForEvaluate): .. this.
	(AddImport): Evaluate the current set of properties/items etc,
	before processing the imported project. Honor the Condition
	for the Import.
	(ProcessProjectAttributes): Update MSBuildProjectDefaultTargets
	property.
	* GroupingCollection.cs (Evaluate): Don't evaluate Imports here.
	* BuildItemGroup.cs (Evaluate): Evaluate only once.
	* BuildPropertyGroup.cs (Evaluate): Evaluate only once.

2009-09-26  Ankit Jain  <jankit@novell.com>

	* Project.cs: Get InitialTargets from the imported projects also.
	The combined list of targets are executed, in the order they were
	found.
	DefaultTargets are also read in from imported projects, and the first
	non-empty DefaultTargets found is used.

2009-09-25  Ankit Jain  <jankit@novell.com>

	* Project.cs (BuildTarget): Handle skipped targets.

2009-09-25  Ankit Jain  <jankit@novell.com>

	* Project.cs (DoLoad): If a VS2003 project is detected, then throw
	InvalidProjectFileException with useful error.

2009-09-24  Ankit Jain  <jankit@novell.com>

	* Project.cs (Load): Emit the .sln.proj file only if env var
	XBUILD_EMIT_SOLUTION is set.

2009-09-24  Ankit Jain  <jankit@novell.com>

	* Project.cs (GetKeyForTarget): Make target name, case insensitive.

2009-09-24  Ankit Jain  <jankit@novell.com>

	* Project.cs (InitializeProperties): Set 'MSBuildProjectDefaultTargets'
	reserved property.

2009-09-10  Ankit Jain  <jankit@novell.com>

	* BuildItem.cs (Evaluate): Metadata from "Include" should be,
	preserved, so use ConvertTo ITaskItem, rather than string.
	Ensure that the new items have the metadata from references _in_
	Include, and the metadata of _this_ builditem.
	* DirectoryScanner.cs (Includes): Change to a array of ITaskItem.
	(MatchedFilenames): Rename to ..
	(MatchedItems): .. this, and change type of array of ITaskItem.
	Ensure that metadata of items in Includes are retained in the