@@ -299,7 +299,7 @@ namespace Microsoft.Build.BuildEngine {
 				if (item_regex == null)
 					item_regex = new Regex (
 						@"@\(\s*"
-						+ @"(?<itemname>[_A-Za-z][_0-9a-zA-Z]*)"
+						+ @"(?<itemname>[_A-Za-z][_\-0-9a-zA-Z]*)"
 						+ @"(?<has_transform>\s*->\s*'(?<transform>[^']*)')?"
 						+ @"(?<has_separator>\s*,\s*'(?<separator>[^']*)')?"
 						+ @"\s*\)");
@@ -312,7 +312,7 @@ namespace Microsoft.Build.BuildEngine {
 				if (property_regex == null)
 					property_regex = new Regex (
 						@"\$\(\s*"
-						+ @"(?<name>[_a-zA-Z][_0-9a-zA-Z]*)"
+						+ @"(?<name>[_a-zA-Z][_\-0-9a-zA-Z]*)"
 						+ @"\s*\)");
 				return property_regex;
 			}
@@ -323,8 +323,8 @@ namespace Microsoft.Build.BuildEngine {
 				if (metadata_regex == null)
 					metadata_regex = new Regex (
 						@"%\(\s*"
-						+ @"((?<name>[_a-zA-Z][_0-9a-zA-Z]*)\.)?"
-						+ @"(?<meta>[_a-zA-Z][_0-9a-zA-Z]*)"
+						+ @"((?<name>[_a-zA-Z][_\-0-9a-zA-Z]*)\.)?"
+						+ @"(?<meta>[_a-zA-Z][_\-0-9a-zA-Z]*)"
 						+ @"\s*\)");
 				return metadata_regex;
 			}
